# zrimo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  deny.toml  package-lock.json  package.json  playwright.config.ts  playwright.matrix.config.ts  playwright.pages.config.ts  release-status.json  rust-toolchain.toml  tsconfig.base.json
.github/workflows/: ci.yml  fuzz-nightly.yml  pages.yml  publish.yml
artifacts/: SHA256SUMS  browser-capabilities-chromium-dpr2.json  browser-capabilities-chromium.json  browser-capabilities-firefox.json  browser-capabilities-webkit.json  fidelity-report.json  fuzz-js.json  fuzz-rust.json  pack-report.json  performance-chromium.json  sbom.spdx.json  size-report.json  vulnerability-report.json
crates/image-wasm/: Cargo.toml
crates/image-wasm/src/: lib.rs
crates/legacy-doc/: Cargo.toml
crates/legacy-doc/examples/: inspect.rs
crates/legacy-doc/src/: binary.rs  comments.rs  document.rs  error.rs  fib.rs  fields.rs  fonts.rs  formatting.rs  headers.rs  lib.rs  limits.rs  lists.rs  media.rs  notes.rs  ooxml_ir.rs  piece_table.rs  properties.rs  sections.rs  sprm.rs  styles.rs  tables.rs
crates/legacy-doc/tests/: qualification.rs
crates/legacy-office-wasm/: Cargo.toml
crates/legacy-office-wasm/examples/: convert.rs
crates/legacy-office-wasm/src/: doc_comments.rs  doc_numbering.rs  doc_tables.rs  lib.rs  xls_biff.rs  xls_ooxml.rs
crates/legacy-office-wasm/tests/: qualification.rs
crates/pdf-wasm/: Cargo.toml
crates/pdf-wasm/src/: lib.rs
crates/pdf-wasm/tests/: qualification.rs
crates/viewer-core/: Cargo.toml
crates/viewer-core/src/: lib.rs
crates/zrimo-core/: Cargo.toml
crates/zrimo-core/src/: lib.rs
docs/: architecture.md  compatibility.md  dependencies.md  fonts.md  getting-started.md  index.md  integrations.md  migration-from-udoc-viewer.md  performance.md  release-checklist.md  security.md  troubleshooting.md  ui.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css
docs/api/: headless.md  reference.md  runtime.md
docs/architecture/: viewport.md
docs/formats/: office.md  pdf-images-data.md
docs/internal/: worker-protocol.md
docs/testing/: corpus.md  qualification-0.1.0.md  qualification-2026-07-16.md  qualification-2026-07-17.md  regressions.md
docs/universal-document-viewer/: 00-roadmap.md  01-fidelity-corrective-roadmap.md  legacy-doc-spike-decision.md
docs/universal-document-viewer/todo/: 01-foundation-dependency-qualification.md  02-runtime-security.md  03-office-pipeline.md  04-pdf-images-csv-svg.md  05-viewport-interactions-api.md  06-fonts-i18n-basic-ui.md  07-hardening-performance.md  08-packaging-release.md  09-release-quarantine-regression-harness.md  10-docx-text-layer-selection.md  11-xlsx-spreadsheet-viewport.md  12-pdf-font-rendering.md  13-legacy-doc-fidelity.md  13a-doc-binary-foundation.md  13b-doc-formatting-sections.md  13c-doc-tables-media-serialization.md  13d-doc-browser-qualification.md  14-fidelity-requalification.md  15-legacy-xls-fidelity.md
examples/react/: README.md  index.html  package.json  vite.config.ts
examples/react/src/: main.tsx  styles.css
examples/vanilla/: index.html  package.json
examples/vanilla/src/: main.ts
fuzz/: Cargo.toml
fuzz/fuzz_targets/: format_detection.rs  legacy_doc.rs  legacy_office.rs  pdf_parser.rs  tiff_parser.rs
scripts/: build-pages.mjs  build-viewer.mjs  build-wasm.mjs  check-licenses.mjs  e2e.mjs  example.mjs  fetch-corpus.mjs  fuzz-js.mjs  fuzz-rust.mjs  generate-sbom.mjs  pack-test.mjs  qualification.mjs  regression-harness.mjs  regression-harness.test.mjs  release-content-policy.mjs  release-content-policy.test.mjs  release-gate.mjs  repository-audit.mjs  size-report.mjs  test-pages.mjs  test-viewer.mjs  verify-release.mjs  vulnerability-audit.mjs
tests/corpus/: adversarial-manifest.json  manifest.json
tests/e2e/: compat.spec.ts  deterministic-fonts.ts  doc.spec.ts  fidelity.spec.ts  pdf.spec.ts  performance.spec.ts  selection.spec.ts  smoke.spec.ts
tests/fixtures/: language-corpus.json
tests/pages/: site.spec.ts
tests/regressions/: manifest.json
