[workspace]
resolver = "2"
members = [
    "crates/zrimo-core",
    "crates/legacy-doc",
    "crates/legacy-office-wasm",
    "crates/image-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.88"

[workspace.dependencies]
office_oxide = { version = "=0.1.6", default-features = false }
image = { version = "=0.25.10", default-features = false, features = ["png"] }
tiff = { version = "=0.11.3", default-features = false }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
thiserror = "=2.0.18"
wasm-bindgen = "=0.2.126"
zip = { version = "=8.6.0", default-features = false, features = ["deflate"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
