[package]
name = "legacy-office-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
office_oxide.workspace = true
viewer-core = { path = "../viewer-core" }
wasm-bindgen.workspace = true

[lints]
workspace = true

