[package]
name = "legacy-office-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
legacy-doc = { path = "../legacy-doc" }
office_oxide.workspace = true
zrimo-core = { path = "../zrimo-core" }
wasm-bindgen.workspace = true
zip.workspace = true

[lints]
workspace = true
