[package]
name = "pdf-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pdf_oxide.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true

[lints]
workspace = true

